[gd_scene load_steps=24 format=3 uid="uid://beso0t6qi3kj4"]

[ext_resource type="Script" uid="uid://cnaesh0m7hsfk" path="res://main/navigation_node.gd" id="1_u3c7t"]
[ext_resource type="Script" uid="uid://ce81ya045pjge" path="res://main/home.gd" id="2_kilxk"]
[ext_resource type="Theme" uid="uid://csn8r8e58m7eh" path="res://liss_theme.tres" id="3_m7e12"]
[ext_resource type="FontFile" uid="uid://d3rb01eqt6j05" path="res://fonts/baloo.ttf" id="4_t16e8"]
[ext_resource type="PackedScene" uid="uid://c1k0iiq4gbaro" path="res://ui_components/button_rounded.tscn" id="5_pqnui"]
[ext_resource type="Texture2D" uid="uid://dq0fa45jmbqn5" path="res://graphics/ic_controller.png" id="6_kilxk"]
[ext_resource type="Texture2D" uid="uid://bowtl356fh4y5" path="res://graphics/ic_settings.png" id="7_u3c7t"]
[ext_resource type="Texture2D" uid="uid://betospwrw7ejp" path="res://graphics/ic_star.png" id="8_kilxk"]
[ext_resource type="AudioStream" uid="uid://begygqtsdto4l" path="res://ui_components/audio/err_1.wav" id="9_m7e12"]
[ext_resource type="Script" uid="uid://bpvn0t072yhf4" path="res://main/rgb.gd" id="9_pqnui"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m7e12"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t16e8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pqnui"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vssx4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dlto1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vycur"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0oang"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ilk6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i2sby"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_begyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahoi2"]

[sub_resource type="Gradient" id="Gradient_t16e8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pqnui"]
gradient = SubResource("Gradient_t16e8")

[node name="NavigationNode2" type="Node2D"]
script = ExtResource("1_u3c7t")
metadata/_custom_type_script = "uid://cnaesh0m7hsfk"

[node name="Home" type="Node2D" parent="."]
script = ExtResource("2_kilxk")

[node name="LblTitle" type="Label" parent="Home"]
offset_left = 21.0
offset_top = 22.0
offset_right = 459.0
offset_bottom = 156.0
theme = ExtResource("3_m7e12")
text = "Toasträknare"

[node name="LblToasts" type="Label" parent="Home"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = 73.0
offset_right = 434.0
offset_bottom = 369.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_m7e12")
theme_override_colors/font_outline_color = Color(0.501961, 0.839216, 0.968627, 1)
theme_override_font_sizes/font_size = 244
text = "620"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LblToastsPurchased" type="Label" parent="Home"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = 306.0
offset_right = 390.0
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_m7e12")
theme_override_fonts/font = ExtResource("4_t16e8")
theme_override_font_sizes/font_size = 48
text = "Köpta toast"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="Node2D" parent="Home"]
position = Vector2(157, 198)

[node name="BtnPlay" parent="Home/UI" instance=ExtResource("5_pqnui")]
offset_left = 170.0
offset_top = 412.0
offset_right = 242.0
offset_bottom = 484.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m7e12")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_t16e8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pqnui")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vssx4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dlto1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vycur")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0oang")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6ilk6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i2sby")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_begyf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ahoi2")
icon = ExtResource("6_kilxk")
icon_alignment = 1

[node name="BtnSettings" parent="Home/UI" instance=ExtResource("5_pqnui")]
offset_left = -74.0
offset_top = 412.0
offset_right = -2.0
offset_bottom = 484.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m7e12")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_t16e8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pqnui")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vssx4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dlto1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vycur")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0oang")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6ilk6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i2sby")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_begyf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ahoi2")
icon = ExtResource("7_u3c7t")
icon_alignment = 1

[node name="BtnInfo" parent="Home/UI" instance=ExtResource("5_pqnui")]
offset_left = 47.0
offset_top = 412.0
offset_right = 119.0
offset_bottom = 484.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m7e12")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_t16e8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pqnui")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vssx4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dlto1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vycur")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0oang")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6ilk6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i2sby")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_begyf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ahoi2")
icon = ExtResource("8_kilxk")
icon_alignment = 1

[node name="BtnStatistics" type="Button" parent="Home/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 186.0
offset_right = 275.0
offset_bottom = 393.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_m7e12")

[node name="Title" type="Label" parent="Home/UI/BtnStatistics"]
layout_mode = 0
offset_left = 95.0
offset_top = 15.0
offset_right = 313.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0, 0.207843, 0.372549, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_t16e8")
theme_override_font_sizes/font_size = 40
text = "Topplistan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FirstPlace" type="Label" parent="Home/UI/BtnStatistics"]
layout_mode = 0
offset_left = 13.0
offset_top = 60.0
offset_right = 373.0
offset_bottom = 116.0
theme_override_colors/font_color = Color(0, 0.509804, 0.792157, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_t16e8")
theme_override_font_sizes/font_size = 35
text = "966 - Lisse Spexlund"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="SecondPlace" type="Label" parent="Home/UI/BtnStatistics"]
layout_mode = 0
offset_left = 11.0
offset_top = 100.0
offset_right = 372.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(0, 0.509804, 0.792157, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_t16e8")
theme_override_font_sizes/font_size = 35
text = "42 - Häggmyr"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="ThirdPlace" type="Label" parent="Home/UI/BtnStatistics"]
layout_mode = 0
offset_left = 11.0
offset_top = 141.0
offset_right = 374.0
offset_bottom = 197.0
theme_override_colors/font_color = Color(0, 0.509804, 0.792157, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_t16e8")
theme_override_font_sizes/font_size = 35
text = "16 - Aline"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="LblInstructions" type="Label" parent="Home/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = 488.0
offset_right = 313.0
offset_bottom = 579.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_m7e12")
theme_override_constants/line_spacing = -12
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_t16e8")
theme_override_font_sizes/font_size = 23
text = "Scanna din tagg på sidan
av maskinen för att logga in.
Scanna en ny tagg för att registrera dig."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Error" type="Node2D" parent="Home"]
script = ExtResource("9_pqnui")

[node name="Audio" type="AudioStreamPlayer" parent="Home/Error"]
stream = ExtResource("9_m7e12")

[node name="Parallax2D" type="Parallax2D" parent="Home/Error"]
repeat_size = Vector2(0, 480)
repeat_times = 2

[node name="TextureRect" type="TextureRect" parent="Home/Error/Parallax2D"]
offset_left = 1.0
offset_right = 481.0
offset_bottom = 1.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_pqnui")

[node name="TextureRect2" type="TextureRect" parent="Home/Error/Parallax2D"]
offset_left = 482.0
offset_right = 962.0
offset_bottom = 1.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_pqnui")

[node name="TimerRgb" type="Timer" parent="Home/Error"]
wait_time = 0.5

[connection signal="button_down" from="Home/UI/BtnPlay" to="Home" method="_on_show_games_list"]
[connection signal="button_down" from="Home/UI/BtnSettings" to="Home" method="_on_show_settings"]
[connection signal="button_down" from="Home/UI/BtnInfo" to="Home" method="_on_show_hype_page"]
[connection signal="timeout" from="Home/Error/TimerRgb" to="Home/Error" method="_on_timer_rgb_timeout"]
